--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<HTML>
+<HTML>
 <HEAD>
 <TITLE>MARTA KIELUSIAK</TITLE>
 </HEAD>
@@ -9,11 +9,12 @@
 <STRONG>Moje nazwisko: Kielusiak<BR>
 <p style="width: 100%; margin-left: 40px;
   padding: 20px 20px 20px 50px; backround-color: yellow;">
-  Akapit zawierający dowolny tekst. Tekst dowolny w akapicie.<BR>
-  Akapit zawierający dowolny tekst. Tekst dowolny w akapicie.<BR>
-<img src="BVB.JPG">
+  Black Veil Bridges to jest mó ulubiony zespół.<BR>
+  Jest to zespół rockowy.<BR>
+  
 </p>
-<a href ="https://www.facebook.com"><IMG src="facebook.png"></A><BR>
-<A href ="marta kielusiak">To jest link do mojej podstrony.</A>
+<A href = "https://www.facebook.com/"><IMG src="facebook.png"></A><BR>
+<A href = marta kielusiak>To jest link do mojej podstrony.</A>
+
 </BODY>
 </HTML>
